add demonstration for wangdandong/spring-social-wechat

--- a/attic/spring-social-showcase-sec/src/main/webapp/WEB-INF/messages/messages.properties
+++ b/attic/spring-social-showcase-sec/src/main/webapp/WEB-INF/messages/messages.properties
@@ -4,3 +4,5 @@ facebook.icon=/resources/social/facebook/f_logo.jpg
 facebook.displayName=Facebook
 linkedin.icon=/resources/social/linkedin/connect_with_linkedin-logo-150x150.jpg
 linkedin.displayName=LinkedIn
+wechat.icon=/resources/social/wechat/icon64_appwx_logo.png
+wechat.displayName=Wechat
